# TSGeneral

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: basic_usage.py  easytestscript.py  eeg_filters_example.py  pipeline_comparison.py  profiler_example.py  stateful_new_api_example.py
examples/bci_jaw_clench/: __init__.py  bci_filters.py  run_inspector.py  sample_eeg_data.csv
tsgeneral/: __init__.py  inspector.py  pipeline.py  profiler.py  stateful_pipeline.py
tsgeneral/ui/: __init__.py  cell_dialog.py  epoch_controls.py  grid_widget.py  main_window.py  plot_widget.py
